--- a/assets/styles/scss/sections/cover.scss
+++ b/assets/styles/scss/sections/cover.scss
@@ -26,7 +26,6 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
   }
 
   @include sm {
